Footer alignment issue, view more store in menu

--- a/static/style/theme.css
+++ b/static/style/theme.css
@@ -1377,6 +1377,10 @@ p {
   padding-right: 20px !important;
 }
 
+.footer-bgCol {
+  padding: 0 32px 30px !important;
+}
+
 .mobile-brand-button {
   color: white;
   height: 35px;
